--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
-<ul>
+
   <% @posts.each do |p| %>
-    <li><%= p.title %> - <%= p.description %></li>
+    <ul><%= p.title %> - <%= p.description %></ul>
   <% end %>
-</ul>
+
